update config.json and devel.cfg for dynamic src

--- a/profiles/devel.cfg
+++ b/profiles/devel.cfg
@@ -54,7 +54,7 @@ use_consul = False
 
 [sources]
 penstock = git  ${remotes:gh}openprocurement/penstock.git  pushurl=${remotes:gh_push}openprocurement/penstock.git
-openprocurement.auction.js = git git@github.com:yshalenyk/openprocurement.auction.js.git 
+openprocurement.auction.js = git https://github.com/Scandie/openprocurement.auction.js branch=dynamic_frontend
 
 [start_replication_script]
 target = http://${project:couchdb_admin}:${project:couchdb_password}@${project:couchdb_host}:${ports:0}/auctions_secured
@@ -91,4 +91,5 @@ target-file = src/openprocurement.auction.js/config.json
 recipe = metapensiero.recipe.script:shell
 install =
 	cd ${buildout:directory}/src/openprocurement.auction.js
+	    gulp clonesub
         gulp
