Change npm script

--- a/profiles/devel.cfg
+++ b/profiles/devel.cfg
@@ -41,22 +41,30 @@ target-executable = true
 recipe = zsft.recipe.cmd
 install = rm -rf ${buildout:directory}/parts/www/* || true
 
-[npm]
+[npm-install]
 recipe = zsft.recipe.cmd
 package =
 install =
 	cd ${buildout:directory}/src/${:package}
 	npm run develop && npm run build
+
+[npm-update]
+recipe = zsft.recipe.cmd
+package =
 update =
     cd ${buildout:directory}/src/${:package}
 	npm run build
 
 [openprocurement.auction.js]
-<= npm
+<= npm-update
+package = openprocurement.auction.js
+<= npm-install
 package = openprocurement.auction.js
 
 [openprocurement.auction.esco-js]
-<= npm
+<= npm-install
+package = openprocurement.auction.esco-js
+<= npm-update
 package = openprocurement.auction.esco-js
 
 
